CloudFormation/security_groups/ccloud-security-groups.yml
Parameters:
  VPC:
    Type: AWS::EC2::VPC::Id
    Description: Security group VPC
    Default: vpc-090ad34ae9364a32b


Resources:

# Security group for the load balancer
# http and https traffice is enabled from anywhere
  CCloudLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to load balancer using http or https
      SecurityGroupIngress:

      # enable http
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      # enable https
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ccloud-load-balancer-security-group

# Security group for VMs
# Traffic is only enabled from the load balancer security group
  CCloudVMSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allowing traffic from the load balancer to VMs
      SecurityGroupIngress:
        
        # Access from load balancer
        - SourceSecurityGroupId: !Ref CCloudLoadBalancerSecurityGroup
          IpProtocol: -1
      
        # SSH access for the vms
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ccloud-vm-security-group

  CCloudElasticSearchServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: allowing traffic to the elasticsearch service
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0


  ElasticsearchServiceRole:
    Type: 'AWS::IAM::ServiceLinkedRole'
    Properties:
      AWSServiceName: es.amazonaws.com
 


Outputs:
  CCloudLoadBalancerSecurityGroup:
    Description: Load balancer security group
    Value: !Ref CCloudLoadBalancerSecurityGroup
  
  CCloudVMSecurityGroup:
    Description: Vm Security group
    Value: !Ref CCloudVMSecurityGroup
  
  CCloudElasticSearchServiceSecurityGroup:
    Description: Elasticsearch service security group
    Value: !Ref CCloudElasticSearchServiceSecurityGroup
